Remove useless L4_NO_RTTI define
When compiling without RTTI (i.e. -fno-rtti) we do not need L4_NO_RTTI.
We only need it when we compile with RTTI in principle, but do not want
to include the L4 RTTI things. So remove L4_NO_RTTI in all cases where
we also specify -fno-rtti when compiling.

See l4sys/include/__typeinfo.h for where this is used.

The only remaining one specifying this legitimately are
libc-minimal_l4re and libpthread.

Change-Id: I1ff3caf251faf55c485b6317f36603c409c642b4
Signed-off-by: Marcus Haehnel <marcus.haehnel@kernkonzept.com>

--- a/cxx/lib/Makefile.inc
+++ b/cxx/lib/Makefile.inc
@@ -9,7 +9,7 @@ PC_FILENAMES             := $(PC_FILENAME) $(PC_FILENAME)_e
 PC_LIBS_$(PC_FILENAME)   := -l$(patsubst lib%,%,$(TARGET_BASENAME))
 PC_LIBS_$(PC_FILENAME)_e := -l$(patsubst lib%,%,$(TARGET_BASENAME))_e
 
-$(foreach src,$(SRC_CC),$(eval CXXFLAGS_$$(src) += -DL4_NO_RTTI -fno-exceptions -fno-rtti))
+$(foreach src,$(SRC_CC),$(eval CXXFLAGS_$$(src) += -fno-exceptions -fno-rtti))
 
 # Prevent the removal of the %.e.cc files. The build system shall not rebuild
 # an unchanged source tree.
