--- a/libkproxy/lib/src/Makefile
+++ b/libkproxy/lib/src/Makefile
@@ -5,6 +5,6 @@ TARGET	 = libkproxy.so libkproxy.a
 SRC_CC	 = factory_svr.cc
 
 # Hm, warum is das hier drin?
-CXXFLAGS += -DL4_NO_RTTI -fno-rtti
+CXXFLAGS += -fno-rtti
 
 include $(L4DIR)/mk/lib.mk
