libc/buildsystem: Add feature for generated headers
Add a new class of headers that are not symlinked from the source dir
but instead need to be generated. All headers listed under the GEN_
category must have an associated Make rule defined in the
target_headers.lst (or a file included from there) that describes how
they can be built.

Change-Id: I153e442fa94addf7d9190c0dc34f19e0bde3afe0
Signed-off-by: Marcus Haehnel <marcus.haehnel@kernkonzept.com>

--- a/libc-headers/Makefile
+++ b/libc-headers/Makefile
@@ -15,6 +15,7 @@ include $(LIBCSRC_DIR)/target_headers.mk
 
 HEADER_DIR  := $(OBJ_DIR)/install_includes
 DST_HEADERS := $(addprefix $(HEADER_DIR)/,$(HDR_common) $(HDR_$(BUILD_ARCH)))
+GEN_HEADERS := $(addprefix $(HEADER_DIR)/,$(GEN_common) $(GEN_$(BUILD_ARCH)))
 
 $(DST_HEADERS): $(HEADER_DIR)/%: % FORCE $(LIBCSRC_DIR)/target_headers.mk \
                                          $(LIBCSRC_DIR)/make_vars.mk
@@ -26,7 +27,7 @@ $(HEADER_DIR): $(GENERAL_D_LOC) $(SRC_DIR)/Makefile $(LIBCSRC_DIR)/make_vars.mk 
 	$(VERBOSE)$(RM) -r $@
 	$(VERBOSE)install -d $@
 	@$(INSTALL_LINK_MESSAGE)
-	$(VERBOSE)$(MAKE) $(DST_HEADERS)
+	$(VERBOSE)$(MAKE) $(DST_HEADERS) $(GEN_HEADERS)
 
 include: $(HEADER_DIR)
 	$(VERBOSE)INCSRC_DIR=$(HEADER_DIR) $(MAKE) -f $(SRC_DIR)/Makefile.install
