minimal_l4re: Make independent of libc
While the lib is used to link against a minimal libc in an l4re
environment it is not strictly speaking a part of the libc. So separate
it out to enable multiple C libraries to use it.

Change-Id: Id379c4dda2a9226f91ade2115a80802b616bacca
Requires-Change-Id: I74e8e9c65ddfeccbd3b4142557ce637cbc534e25
Requires-Change-Id: Icf8688ce1dfcfe93c2912e623d0a5d8fff5aa7c3
Requires-Change-Id: Ie4f77c21ca5dbe351dfda2d4fdf3635a08324161
Requires-Change-Id: Ie322c9588957a123bb27dfa80141202936ee40fc
Signed-off-by: Marcus Haehnel <marcus.haehnel@kernkonzept.com>

--- a/libc/Control
+++ b/libc/Control
@@ -1,4 +1,4 @@
-Provides: libc libpthread libc_pthread libc_minimal_l4re
+Provides: libc libpthread libc_pthread
 requires: l4sys l4re l4re-util l4re_c l4re_c-util ldscripts compiler-rt
           libc_be_minimal_log_io libc_be_l4re libc_be_l4refile
           libc_support_misc libc_be_fs_noop libc_be_sem_noop libc_be_sig
