--- a/libc_backends/lib/misc/Makefile
+++ b/libc_backends/lib/misc/Makefile
@@ -35,6 +35,7 @@ SRC_C       = daemon.c \
               wait.c \
               wait3.c \
               waitpid.c
-CFLAGS      = -DNOT_IN_libc -include libc-symbols.h
 
 include $(L4DIR)/mk/lib.mk
+
+CPPFLAGS-$(CONFIG_L4_LIBC_UCLIBC) += -DNOT_IN_libc -include libc-symbols.h
