--- a/libc_backends/lib/fs_noop/Makefile
+++ b/libc_backends/lib/fs_noop/Makefile
@@ -6,6 +6,7 @@ PC_FILENAME = libc_be_fs_noop
 PC_LIBS       = %{-link-libc:%{shared:--whole-archive -lc_be_fs_noop.p --no-whole-archive;:libc_be_fs_noop.ofl}}
 PC_LIBS_PIC   =
 SRC_C       = fs.c
-CFLAGS      = -DNOT_IN_libc -include libc-symbols.h
 
 include $(L4DIR)/mk/lib.mk
+
+CPPFLAGS-$(CONFIG_L4_LIBC_UCLIBC) = -DNOT_IN_libc -include libc-symbols.h
