libc/src_rules.mk: Separate libc-independent parts
Change-Id: I4465a19ba2ac08f73d2b865aedda1c1a2a635da0
Signed-off-by: Marcus Haehnel <marcus.haehnel@kernkonzept.com>

--- a/libc-minimal/libc/Makefile
+++ b/libc-minimal/libc/Makefile
@@ -7,5 +7,5 @@ include $(L4DIR)/mk/Makeconf
 
 LIBCSRC_DIR	?= $(PKGDIR)/../libc/$(CONFIG_L4_LIBC)
 
-include $(LIBCSRC_DIR)/src_rules.mk
+include $(PKGDIR)/../libc/src_rules.mk
 
