--- a/libc/uclibc-ng/libc/Makefile
+++ b/libc/uclibc-ng/libc/Makefile
@@ -4,5 +4,5 @@ L4DIR  ?= $(PKGDIR)/../../..
 LIBCSRC_DIR ?= $(PKGDIR)/uclibc-ng
 
 include $(L4DIR)/mk/Makeconf
-include $(LIBCSRC_DIR)/src_rules.mk
+include $(PKGDIR)/src_rules.mk
 
