libc-headers: Always update headers symlinks if the new target differs
When we add a new override header, then there is nothing telling the
buildsystem to update the symlinks. To force this we need a tracker that
gets only updated when one of the source headers is newer than the
tracker. We use $? for that which contains the vpath resolved
prerequisites which have a newer timestamp than the target.

Change-Id: I4305e4d27f0edb8c8bff8f6ce84520a5b4bd6200
Signed-off-by: Marcus Haehnel <marcus.haehnel@kernkonzept.com>

--- a/libc-headers/Makefile
+++ b/libc-headers/Makefile
@@ -20,13 +20,16 @@ include $(LIBCSRC_DIR)/target_headers.mk
 DST_HEADERS := $(addprefix $(HEADER_DIR)/,$(HDR_common) $(HDR_$(BUILD_ARCH)))
 GEN_HEADERS := $(addprefix $(HEADER_DIR)/,$(GEN_common) $(GEN_$(BUILD_ARCH)))
 
+$(HEADER_DIR).include_tracker: $(DST_HEADERS)
+	$(if $?,touch $@)
+
 $(DST_HEADERS): $(HEADER_DIR)/%: % FORCE $(LIBCSRC_DIR)/target_headers.mk \
                                          $(LIBCSRC_DIR)/make_vars.mk
-	$(VERBOSE)[ -d $(@D) ] || $(MKDIR) $(@D)
-	$(VERBOSE)$(LN) -sf $(abspath $<) $@
+	$(VERBOSE)$(call lessfork_mkdir,$(@D))
+	$(VERBOSE)[[ $< -ef $@ ]] || $(LN) -sf $(abspath $<) $@
 
 $(HEADER_DIR): $(GENERAL_D_LOC) $(SRC_DIR)/Makefile $(LIBCSRC_DIR)/make_vars.mk \
-               $(LIBCSRC_DIR)/target_headers.mk
+               $(LIBCSRC_DIR)/target_headers.mk $(HEADER_DIR).include_tracker
 	$(VERBOSE)$(RM) -r $@
 	$(VERBOSE)install -d $@
 	@$(INSTALL_LINK_MESSAGE)
