libpthread: Remove libc_multiple_threads and multiple_threads flags
We do not have any users of those flags in our implementation.

Change-Id: Ib3a62f398bfd1f670af04cb12492afca5e3b49f6
Signed-off-by: Marcus Haehnel <marcus.haehnel@kernkonzept.com>

--- a/libc/musl/libpthread/src/Makefile
+++ b/libc/musl/libpthread/src/Makefile
@@ -28,7 +28,7 @@ SRC_C_libc_pthread.p.a  += $(SRC_C_libc_pthread)
 SRC_CC_libc_pthread.p.a += $(SRC_CC_libc_pthread)
 SRC_S_libc_pthread.p.a  += $(SRC_S_libc_pthread)
 
-SRC_C_libc_pthread.ofl  += $(SRC_C_libc_pthread) libc_pthread_init.c
+SRC_C_libc_pthread.ofl  += $(SRC_C_libc_pthread)
 SRC_CC_libc_pthread.ofl += $(SRC_CC_libc_pthread)
 SRC_S_libc_pthread.ofl  += $(SRC_S_libc_pthread)
 
