libpthread: always use TLS
We always use TLS in libpthread on all our supported architectures. So
cut down the clutter and define this hard and remove the unused code
paths.

Change-Id: I59d74bb2f6758fd0ef40620443ed4ad32725d571
Signed-off-by: Marcus Haehnel <marcus.haehnel@kernkonzept.com>

--- a/libc/musl/libpthread/src/Makefile
+++ b/libc/musl/libpthread/src/Makefile
@@ -52,7 +52,7 @@ PRIVATE_INCDIR = $(SRC_DIR) $(INCDIR-$(ARCH)) $(CONTRIB_DIR)/arch/$(LIBC_ARCH)
 
 DEFINES   := -DL4_THREAD_SAFE -D_GNU_SOURCE=1 -D__NO_WEAK_PTHREAD_ALIASES=1 \
              -D_LIBC=1 -DIS_IN_libpthread=1 -DNOT_IN_libc=1 -DL4_NO_RTTI=1 \
-             -DUSE___THREAD=1
+             -DUSE_TLS=1
 
 CXXFLAGS  += -fno-exceptions
 
