--- a/libc/uclibc-ng/libpthread/src/Makefile
+++ b/libc/uclibc-ng/libpthread/src/Makefile
@@ -54,7 +54,7 @@ PRIVATE_INCDIR = $(SRC_DIR) $(INCDIR-$(ARCH)) $(CONTRIB_DIR)/ldso/include
 
 DEFINES   := -DL4_THREAD_SAFE -D_GNU_SOURCE=1 -D__NO_WEAK_PTHREAD_ALIASES=1 \
              -D_LIBC=1 -DIS_IN_libpthread=1 -DNOT_IN_libc=1 -DL4_NO_RTTI=1 \
-             -DUSE___THREAD=1
+             -DUSE_TLS=1
 
 CFLAGS    += -include $(CONTRIB_DIR)/include/libc-symbols.h
 CXXFLAGS  += -include $(CONTRIB_DIR)/include/libc-symbols.h
