libpthread: Remove unused cleanup code
These functions were never called in the current libpthread code.

Change-Id: I0a4ddbaa322e6e0d2bf4eee559a1756475fcb1ba
Signed-off-by: Marcus Haehnel <marcus.haehnel@kernkonzept.com>

--- a/libc/musl/libpthread/src/Makefile
+++ b/libc/musl/libpthread/src/Makefile
@@ -20,7 +20,7 @@ LDSODIR    = $(CONTRIB_DIR)/ldso/ldso
 SRC_CC_libc_pthread   = manager.cc l4.cc
 SRC_C_libc_pthread   += spinlock.c mutex.c condvar.c rwlock.c specific.c \
                         semaphore.c attr.c barrier.c join.c pthread.c \
-                        cancel.c ptcleanup.c signals.c \
+                        cancel.c signals.c \
                         sysdeps/$(LIBC_ARCH)/pspinlock.c impl-musl.c
 SRC_S_libc_pthread    = tramp-$(ARCH).S
 
