--- a/libc/musl/libpthread/include/Makefile
+++ b/libc/musl/libpthread/include/Makefile
@@ -1,6 +1,6 @@
 PKGDIR = 	../../..
 L4DIR ?= 	$(PKGDIR)/../../..
 
-INSTALL_INC_PREFIX := musl
+INSTALL_INC_PREFIX = $(CONFIG_L4_LIBC)
 
 include $(L4DIR)/mk/include.mk
