--- a/libc/uclibc-ng/libpthread/include/Makefile
+++ b/libc/uclibc-ng/libpthread/include/Makefile
@@ -1,7 +1,6 @@
 PKGDIR = 	../../..
 L4DIR ?= 	$(PKGDIR)/../../..
 
-INSTALL_INC_PREFIX := uclibc-ng
+INSTALL_INC_PREFIX = $(CONFIG_L4_LIBC)
 
 include $(L4DIR)/mk/include.mk
-
